# compta

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/actions/: deploy-docker-mbpnv.yml
.github/actions/build-to-ghcr/: action.yml
.github/actions/deploy-docker-local/: action.yml
.github/actions/deploy-docker-mbpnv/: action.yml
.github/actions/python-build-test/: action.yml
.github/workflows/: build-and-deploy.yml  ci-cd-database.yml
database/: Dockerfile  Makefile  README.md  pyproject.toml
database/.github/workflows/: ci-cd.yml
database/src/database_pkg/: app.py  excel_to_sqlite.py  utils.py
database/src/database_pkg/config/: settings.py
database/tests/: test_app.py
scripts/: health-check.sh  test-sql.sh  test-upload.sh
services/database/: .env.env.example  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/database/src/database_pkg/: app.py  config.py  excel_to_sqlite.py  utils.py
services/database/src/database_pkg/config/: logs.py  schemas.py  settings.py
services/database/tests/: test_app.py  test_config.py  test_settings.py
services/prepro/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
services/prepro/src/prepro/: utils.py
services/prepro/src/prepro/config/: logs.py  schemas.py  settings.py
services/prepro/tests/: test_settings.py
shared/config/: logging_config.py
src/compta_pkg/config/: paths.py
src/compta_pkg/database/: app.py  excel_to_sqlite.py  utils.py
src/compta_pkg/database/config/: settings.py
src/compta_pkg/database/tests/: test_app.py
src/compta_pkg/shared/config/: settings.py
